# qvark

./: .dockerignore  .gitignore  .zenodo.json  AUTHORS  CITATION.cff  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  NOTICE  README.md  SECURITY.md  TRADEMARKS.md
.github/workflows/: build-windows.yml  scientific-publish.yml  testsprite-enterprise.yml
docs/: COMMANDS.md  COMMUNITY.md  DISTRIBUTION.md  INDEPENDENT_REVIEW.md  INSTALL.md  MEDIA.md  PERFORMANCE.md  PRODUCTION.md  QORX.md  QORX_1_0_4_RUST.md  REAL_WORLD_TESTS.md  REFERENCE_PAPERS.md  SAFE-R.md  SERVER.md  TECHNICAL_CREDIBILITY.md  TESTSPRITE.md  _config.yml  index.md
docs/benchmarks/: README.md  (+4 more)
examples/: goal.qorx
scripts/: build-preprint-pdf.py  check-technical-credibility.ps1  check-testsprite-enterprise.ps1  publish-science.ps1  run-benchmark.py  safer-check.ps1
src/: a2a.rs  adapters.rs  aim.rs  b2c_quant.rs  cache_plan.rs  capsule.rs  compression.rs  config.rs  context_proto.rs  context_vm.rs  cosmos.rs  cost_stack.rs  impact.rs  index.rs  judge.rs  kv.rs  lattice.rs  lexicon.rs  main.rs  memory.rs  money.rs  proto_store.rs  qorx.rs  response_cache.rs  security.rs  session.rs  share.rs  squeeze.rs  stats.rs  text.rs  truth.rs
tests/: a2a_qorx.rs  capsule.rs  context_protobuf.rs  context_vm.rs  cosmos_lexicon.rs  lattice.rs  qorx_language.rs  research_features.rs  stats_reset.rs  truth_kernel.rs
testsprite_tests/: TC001_Community_homepage_shows_Qorx_1.0.4.py  TC002_Community_docs_expose_boundary_and_TestSprite_QA_links.py  TC003_Technical_credibility_page_bounds_language_and_bytecode_claims.py
(+42 files in other folders)
