[package]
name = "qorx"
version = "1.0.4"
edition = "2021"
autobins = false
authors = ["Marvin Sarreal Villanueva <marvin@orin.work>"]
description = "Qorx Community Edition source CLI for local context-resolution research."
homepage = "https://github.com/bbrainfuckk/qorx"
repository = "https://github.com/bbrainfuckk/qorx"
documentation = "https://github.com/bbrainfuckk/qorx/tree/main/docs/handbook"
readme = "README.md"
license = "AGPL-3.0-only"
publish = false
keywords = ["qorx", "context", "compiler", "runtime", "ai"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["packaging/aur/**"]

[[bin]]
name = "qorx"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "0.7"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
ed25519-dalek = "2.2"
getrandom = "0.3"
ml-dsa = { version = "0.1.0-rc.8", default-features = false, features = ["alloc", "rand_core"] }
prost = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net", "process", "signal", "sync", "time"] }
toml_edit = "0.23"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = "z"
strip = true
panic = "abort"
lto = "fat"
codegen-units = 1
